--- a/ThemeColor-Sample/Views/Storyboards/ColorConcept.storyboard
+++ b/ThemeColor-Sample/Views/Storyboards/ColorConcept.storyboard
@@ -15,10 +15,25 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mTo-6u-mP2">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="mTo-6u-mP2" secondAttribute="bottom" id="2LV-yE-jGc"/>
+                            <constraint firstItem="mTo-6u-mP2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="gHb-cL-yQs"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="mTo-6u-mP2" secondAttribute="trailing" id="tKq-NV-wSU"/>
+                            <constraint firstItem="mTo-6u-mP2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="y0i-h9-3na"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="オススメ" id="zlJ-dS-oHK"/>
+                    <connections>
+                        <outlet property="tableView" destination="mTo-6u-mP2" id="qfv-n1-PcF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
